feat(perks): enhance shop system with cooldowns, limits, and vending machine integration
- Added rebuy cooldowns for seeker perks and finite player purchase limits for hider/seeker perks.
- Improved PerkShopUI with dynamic item updates, locking visual cues, and owner tracking.
- Implemented support for inventory and vending machine-based shop modes, with proper handling of player settings.
- Introduced fallback levitation mechanics for seeker Elytra Rush Perk.
- Optimized perk data tracking with better concurrency and logic simplifications.